--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "lucide-vue-next": "^0.438.0",
     "pinia": "^2.2.2",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-virtual-scroller": "^2.0.0-beta.8",
+    "vue3-lazyload": "^0.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
