--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^9.0.3",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "lucide-vue-next": "^0.438.0",
+    "pinia": "^2.2.2",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue3-lazyload": "^0.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -21,12 +26,15 @@
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^8.7.1",
     "lint-staged": "^11.1.2",
-    "prettier": "^2.4.1"
+    "postcss": "^8.4.42",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^3.4.10"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
