--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "pinia": "^2.2.2",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
-    "vue3-lazyload": "^0.3.8",
-    "vue-chart-3": "^3.1.8"
+    "vue3-lazyload": "^0.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
