--- a/.github/workflows/ftp-dev.yml
+++ b/.github/workflows/ftp-dev.yml
@@ -21,7 +21,7 @@ jobs:
           npm install
 
       - name: npm build
-        run: npm build --if-present
+        run: npm run build --if-present
 
       - name: 📂 Sync application files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
