--- a/.github/workflows/ftp-dev.yml
+++ b/.github/workflows/ftp-dev.yml
@@ -23,7 +23,7 @@ jobs:
       - name: npm build
         run: npm run build --if-present
 
-      - name: 📂 Sync application files
+      - name: 📂 Sync app files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.SERVER }}
