--- a/.github/workflows/ftp-dev.yml
+++ b/.github/workflows/ftp-dev.yml
@@ -23,6 +23,10 @@ jobs:
       - name: npm build
         run: npm run build --if-present
 
+      - name: copy index.html dist
+        run:
+          cp dist/index.html public/index.html
+
       - name: 📂 Sync app files
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
@@ -30,24 +34,25 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           exclude: |
+            public/**
             node_modules/**/*
             .git/**/*
             .github/**/*
-          server-dir: './'
+          server-dir: '../'
           local-dir: './'
           timeout: 9999999
 
-#      - name: 📂 Sync public files
-#        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-#        with:
-#          server: ${{ secrets.SERVER }}
-#          username: ${{ secrets.USERNAME }}
-#          password: ${{ secrets.PASSWORD }}
-#          exclude: |
-#            node_modules/**/*
-#            vendor/**/*
-#            .git/**/*
-#            .github/**/*
-#            .env
-#          server-dir: './'
-#          local-dir: './public/'
+      - name: 📂 Sync public files
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ${{ secrets.SERVER }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          exclude: |
+            node_modules/**/*
+            vendor/**/*
+            .git/**/*
+            .github/**/*
+            .env
+          server-dir: './'
+          local-dir: './public/'
