--- a/.github/workflows/ftp-dev.yml
+++ b/.github/workflows/ftp-dev.yml
@@ -34,8 +34,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           exclude: |
-            dist/**
-            public/**
             node_modules/**/*
             .git/**/*
             .github/**/*
@@ -43,32 +41,32 @@ jobs:
           local-dir: './'
           timeout: 9999999
 
-      - name: 📂 Sync public files
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-        with:
-          server: ${{ secrets.SERVER }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          exclude: |
-            node_modules/**/*
-            vendor/**/*
-            .git/**/*
-            .github/**/*
-            .env
-          server-dir: './'
-          local-dir: './public/'
+#      - name: 📂 Sync public files
+#        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+#        with:
+#          server: ${{ secrets.SERVER }}
+#          username: ${{ secrets.USERNAME }}
+#          password: ${{ secrets.PASSWORD }}
+#          exclude: |
+#            node_modules/**/*
+#            vendor/**/*
+#            .git/**/*
+#            .github/**/*
+#            .env
+#          server-dir: './'
+#          local-dir: './public/'
 
-      - name: 📂 Sync dist files
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
-        with:
-          server: ${{ secrets.SERVER }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          exclude: |
-            node_modules/**/*
-            vendor/**/*
-            .git/**/*
-            .github/**/*
-            .env
-          server-dir: './'
-          local-dir: './dist/'
+#      - name: 📂 Sync dist files
+#        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+#        with:
+#          server: ${{ secrets.SERVER }}
+#          username: ${{ secrets.USERNAME }}
+#          password: ${{ secrets.PASSWORD }}
+#          exclude: |
+#            node_modules/**/*
+#            vendor/**/*
+#            .git/**/*
+#            .github/**/*
+#            .env
+#          server-dir: './'
+#          local-dir: './dist/'
