--- a/.github/workflows/ftp-dev.yml
+++ b/.github/workflows/ftp-dev.yml
@@ -32,5 +32,5 @@ jobs:
           server: ${{ secrets.SERVER }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          local-dir: './'
+          local-dir: './dist/'
           server-dir: './'
