--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@vuepic/vue-datepicker": "^9.0.3",
     "axios": "^1.7.7",
     "chart.js": "^3.9.1",
+    "compressorjs": "^1.2.1",
     "core-js": "^3.8.3",
     "dropzone-vue": "^0.1.11",
     "lucide-vue-next": "^0.438.0",
     "pinia": "^2.2.2",
+    "qrcode.vue": "^3.6.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.8",
