--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.8",
     "vue-ctk-date-time-picker": "^3.0.0-alpha.0",
+    "vue-qrcode-reader": "^5.5.11",
     "vue-router": "^4.0.3",
     "vue3-lazyload": "^0.3.8"
   },
