--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "chart.js": "^3.9.1",
     "compressorjs": "^1.2.1",
     "core-js": "^3.8.3",
