--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
-    "babel-plugin-transform-es2015-template-literals": "^6.22.0",
     "chart.js": "^3.9.1",
     "compressorjs": "^1.2.1",
-    "core-js": "^3.8.3",
+    "core-js": "^3.39.0",
     "dropzone-vue": "^0.1.11",
     "lucide-vue-next": "^0.438.0",
     "pinia": "^2.2.2",
+    "regenerator-runtime": "^0.14.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-chart-3": "^3.1.8",
@@ -26,15 +25,18 @@
     "vue3-lazyload": "^0.3.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.0",
     "@babel/eslint-parser": "^7.12.16",
     "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/preset-env": "^7.26.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-pwa": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
