--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "pinia": "^2.2.2",
     "regenerator-runtime": "^0.14.1",
     "register-service-worker": "^1.7.2",
-    "vue": "^3.2.13",
+    "vue": "^3.5.13",
     "vue-chart-3": "^3.1.8",
     "vue-ctk-date-time-picker": "^3.0.0-alpha.0",
+    "vue-loader": "^17.4.2",
     "vue-qrcode-reader": "^5.5.11",
     "vue-router": "^4.0.3",
-    "vue3-lazyload": "^0.3.8"
+    "vue3-lazyload": "^0.3.8",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
