--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "compressorjs": "^1.2.1",
     "core-js": "^3.39.0",
     "dropzone-vue": "^0.1.11",
+    "laravel-echo": "^1.19.0",
     "lucide-vue-next": "^0.438.0",
     "pinia": "^2.2.2",
+    "pusher-js": "^8.4.0",
     "regenerator-runtime": "^0.14.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.5.13",
