--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,30 @@
 NODE_ENV=local
 VUE_APP_API_BASE_URL=
 VUE_APP_NAME=Kasirin
+
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
+
+VUE_APP_APP_NAME="${APP_NAME}"
+VUE_APP_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VUE_APP_PUSHER_HOST="${PUSHER_HOST}"
+VUE_APP_PUSHER_PORT="${PUSHER_PORT}"
+VUE_APP_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VUE_APP_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+REVERB_APP_ID=
+REVERB_APP_KEY=
+REVERB_APP_SECRET=
+REVERB_HOST=stage-descartes.websitein.id
+REVERB_PORT=8081
+REVERB_SCHEME=http
+
+VUE_APP_REVERB_APP_KEY="${REVERB_APP_KEY}"
+VUE_APP_REVERB_HOST="${REVERB_HOST}"
+VUE_APP_REVERB_PORT="${REVERB_PORT}"
+VUE_APP_REVERB_SCHEME="${REVERB_SCHEME}"
