--- a/.env.example
+++ b/.env.example
@@ -1,28 +1,13 @@
 NODE_ENV=local
-VUE_APP_API_BASE_URL=
+VUE_APP_API_BASE_URL=https://websitein.id
 VUE_APP_NAME=Kasirin
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
-
-VUE_APP_APP_NAME="${APP_NAME}"
-VUE_APP_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-VUE_APP_PUSHER_HOST="${PUSHER_HOST}"
-VUE_APP_PUSHER_PORT="${PUSHER_PORT}"
-VUE_APP_PUSHER_SCHEME="${PUSHER_SCHEME}"
-VUE_APP_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-REVERB_APP_ID=
-REVERB_APP_KEY=
-REVERB_APP_SECRET=
-REVERB_HOST=stage-descartes.websitein.id
-REVERB_PORT=8081
-REVERB_SCHEME=http
+REVERB_APP_ID=app-id
+REVERB_APP_KEY=app-key
+REVERB_APP_SECRET=app-secret
+REVERB_HOST=websitein.id
+REVERB_PORT=443
+REVERB_SCHEME=https
 
 VUE_APP_REVERB_APP_KEY="${REVERB_APP_KEY}"
 VUE_APP_REVERB_HOST="${REVERB_HOST}"
