--- a/.github/workflows/ftp-prod.yml
+++ b/.github/workflows/ftp-prod.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           cp .env.example .env
           sed -i 's/NODE_ENV=local/NODE_ENV=${{ secrets.NODE_ENV }}/g' .env
-          sed -i 's|VUE_APP_API_BASE_URL=https://websitein.id/|VUE_APP_API_BASE_URL=${{ secrets.VUE_APP_API_BASE_URL }}|g' .env
+          sed -i 's|VUE_APP_API_BASE_URL=https://websitein.id|VUE_APP_API_BASE_URL=${{ secrets.VUE_APP_API_BASE_URL }}|g' .env
           sed -i 's|VUE_APP_NAME=Kasirin|VUE_APP_NAME=${{ secrets.VUE_APP_NAME }}|g' .env
           sed -i 's/REVERB_APP_ID=app-id/REVERB_APP_ID=${{ secrets.REVERB_APP_ID }}/g' .env
           sed -i 's/REVERB_APP_KEY=app-key/REVERB_APP_KEY=${{ secrets.REVERB_APP_KEY }}/g' .env
