--- a/.github/workflows/ftp-prod.yml
+++ b/.github/workflows/ftp-prod.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: "22"
 
       - name: Copy .env
         run: |
@@ -42,5 +42,5 @@ jobs:
           server: ${{ secrets.PROD_SERVER }}
           username: ${{ secrets.PROD_USERNAME }}
           password: ${{ secrets.PROD_PASSWORD }}
-          local-dir: './dist/'
-          server-dir: './'
+          local-dir: "./dist/"
+          server-dir: "./"
