--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
 {
-    "useTabs": false,
-    "printWidth": 80,
-    "tabWidth": 2,
-    "endOfLine": "lf"
+  "useTabs": false,
+  "printWidth": 80,
+  "tabWidth": 2
 }
